# stov_new

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
stock_news/: main.py
